# CMakeHandson

./: CMakeLists.txt  Makefile  README.md  main.cpp  my_lib.cpp
Helloworld/: CMakeLists.txt
Helloworld/inc/: CMakeLists.txt
Helloworld/src/: CMakelists.txt  my_lib.cpp
src/: CMakelists.txt  my_lib.cpp
